# bc_deep_learning_in_biology

./: LICENSE  Lab1_perceptron_ProteinCoding.ipynb  README.md  SETUP.md  block-course-export.yaml  block-course.yaml  pyproject.toml
lab1/: Lab1_bonus_encoding.ipynb  Lab1_introduction_neural_networks.ipynb  Lab1_perceptron_ProteinCoding.ipynb  Lab1a_introduction_neural_networks.ipynb  Lab1b_bonus_encoding.ipynb  language.py
lab2/: lab2_cnn_for_mri.ipynb
lab3/: Lab3_LSTM_DNAtranslation.ipynb  Lab3_LSTM_DNAtranslation_soln.ipynb  Lab3_LSTM_solutions.ipynb  Lab3a_LSTM_DNAtranslation.ipynb  Lab3b_LSTM_short_stories.txt  Lab3b_LSTM_textGeneration.ipynb
lab4/: 1_plm-embeddings.ipynb  1_protein_language_models.ipynb  2_fine_tuning.ipynb  2_plm-fine-tuning.ipynb  README.md
project/: README.md  stability_prediction_BLOSUM_baseline.ipynb  stability_prediction_from_embeddings.ipynb  stability_prediction_from_sequence.ipynb  stability_prediction_more_embeddings.ipynb
