[project]
name = "bc-deep-learning-in-biology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "biopython>=1.86",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "jupyter>=1.1.1",
    "lightning>=2.6.1",
    "py3dmol>=2.5.4",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.1.0",
]
