[project]
name = "bc-deep-learning-in-biology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.3.0",
    "biopython>=1.86",
    "datasets>=3.2.0",
    "evaluate>=0.4.3",
    "jupyter>=1.1.1",
    "lightning>=2.5.0",
    "matplotlib>=3.9",
    "numpy<2",
    "py3dmol>=2.4.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools==81.0.0",
    "tensorboard>=2.20.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
    "transformers==4.48.3",
]

[tool.uv.extra-build-dependencies]
nglview = ["setuptools"]
